Silenced warnings to execute test and add unit test to controller layer with 100% coverage